fixed an issue where the background image would stretch

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1314,9 +1314,9 @@ input, select, textarea {
 	}
 
 	body {
-		background-image: url("images/overlay.png"), url("images/bg.jpg");		
+		background-image: url("images/bg.jpg");		
 		background-repeat: repeat, no-repeat;
-		background-size: auto, 100% 100%;
+		background-size: cover, 100% 100%;
 		background-attachment: fixed;
 		overflow-y: scroll;
 	}
